k8s-deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-fastapi-deployment
  labels:
    app: yolo-fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo-fastapi
  template:
    metadata:
      labels:
        app: yolo-fastapi
    spec:
      # 1. SHARED STORAGE: This lives as long as the pod lives
      volumes:
      - name: shared-data
        emptyDir: {}
      containers:
      - name: yolo-fastapi-container
        # REMEMBER TO CHANGE THIS TO YOUR ACTUAL ARTIFACT REGISTRY IMAGE URL!
        image: us-central1-docker.pkg.dev/project-5a33486e-38f2-4a82-b50/yolo-repo/yolo-fastapi@sha256:4928032412c3d3a3cb31a79848d98bdd54be63af1d2b5edb77077cd42c66cfe4
        volumeMounts:
        - name: shared-data
          mountPath: /data
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
      - name: log-recorder-sidecar
        image: google/cloud-sdk:slim
        command: ["/bin/sh", "-c"]
        args:
          - |
            while true; do
              # Sync the log file to GCS every 60 seconds
              if [ -f /data/predictions.log ]; then
                gsutil cp /data/predictions.log gs://yolo-assets/logs/$(hostname)_$(date +%F).log
              fi
              sleep 60
            done
        volumeMounts:
        - name: shared-data
          mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: yolo-fastapi-service
spec:
  type: NodePort # GKE Ingress requires NodePort
  selector:
    app: yolo-fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yolo-fastapi-ingress
  annotations:
    kubernetes.io/ingress.class: "gce" # Tells GKE to use the default Google Load Balancer
    networking.gke.io/managed-certificates: "yolo-managed-cert"
    # Optional: This tells the LB to redirect HTTP traffic to HTTPS automatically
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: yolo-test.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yolo-fastapi-service
            port:
              number: 80
